<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_law"
        android:title="@string/title_lawyers" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_favs"
        android:icon="@drawable/ic_star"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_balance"
        android:icon="@drawable/ic_balance"
        android:title="@string/title_balance" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>